--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <body>
     <header class="container mx-auto">
         <!-- navbar -->
-        <div class="navbar bg-base-100">
+        <div class="navbar bg-base-100 px-5">
             <div class="navbar-start">
               <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <div tabindex="0" role="button" class="pr-3 lg:hidden">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="h-5 w-5"
+                    class="h-8 w-8"
                     fill="none"
                     viewBox="0 0 24 24"
                     stroke="currentColor">
@@ -62,7 +62,7 @@
               </div>
               <a class="text-4xl font-manrope font-bold ">Hockey<span class="text-[#FF4240]">'</span>s</a>
             </div>
-            <div class="navbar-center hidden lg:flex">
+            <div class="navbar-center hidden sm:block">
               <ul class="menu menu-horizontal px-1">
                 <li><a class="text-[#FF4240]">Home</a></li>                
                 <li><a>About</a></li>
@@ -77,43 +77,60 @@
             </div>
         </div>
         <!-- banner -->
-        <div class="carousel w-full">
+        <div class="carousel mx-5">
             <!-- slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
               <img
-                src="./Images/1.png"
-                class="w-full" />
+                src="./Images/banner-1.jpg"
+                class="w-full lg:h-[550px]" />
 
-              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                <a href="#slide3" class="btn btn-circle">❮</a>
-                <a href="#slide2" class="btn btn-circle">❯</a>
+              <div class="absolute left-2 sm:left-5 right-2 sm:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+               
+                <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❮</a>
+                
+                <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❯</a>
               </div>
             </div>
 
             <!-- slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
               <img
-                src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp"
-                class="w-full" />
-              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                <a href="#slide1" class="btn btn-circle">❮</a>
-                <a href="#slide3" class="btn btn-circle">❯</a>
+                src="./Images/banner-2.jpg"
+                class="w-full lg:h-[550px]" />
+              <div class="absolute left-2 sm:left-5 right-2 sm:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❮</a>
+                <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❯</a>
               </div>
             </div>
             <!-- slide 3 -->
             <div id="slide3" class="carousel-item relative w-full">
               <img
-                src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
-                class="w-full" />
-              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                <a href="#slide2" class="btn btn-circle">❮</a>
-                <a href="#slide1" class="btn btn-circle">❯</a>
+                src="./Images/banner-3.jpg"
+                class="w-full lg:h-[550px]" />
+              <div class="absolute left-2 sm:left-5 right-2 sm:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❮</a>
+                <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❯</a>
               </div>
             </div>
 
-          </div>
+        </div>
     </header>
-    <main></main>
+    <main>
+
+      <!-- Hockey club -->
+       <section>
+        <div class="container mx-auto px-5 py-8 sm:py-10 xl:py-20">
+          <div class="text-center">
+            <h1 class="text-2xl sm:text-3xl xl:text-5xl font-extrabold mb-3">Professional Hockeys Club</h1>
+            <p class="text-sm sm:text-lg xl:text-xl text-gray-500 w-11/12 sm:w-9/12 mx-auto">Professional ice hockey is the competition of ice hockey in which participants are paid to play. Professional competition began in North America around 1900. </p>
+          </div>
+          <div>
+
+          </div>
+        </div>
+       </section>
+
+    </main>
     <footer></footer>
   </body>
 </html>
