program section added

--- a/index.html
+++ b/index.html
@@ -151,8 +151,16 @@
       </div>
     </section>
 
+    <!-- program section -->
     <section>
-      
+      <div class="container mx-auto px-5 py-8 sm:py-10 xl:py-20">
+        <div class="text-center mb-8 xl:mb-12">
+          <h1 class="text-2xl sm:text-3xl xl:text-5xl font-extrabold mb-3">Professional Hockeys Club</h1>
+          <p class="text-sm sm:text-lg xl:text-xl text-gray-500 w-11/12 sm:w-9/12 mx-auto">Professional ice hockey is
+            the competition of ice hockey in which participants are paid to play. Professional competition began in
+            North America around 1900. </p>
+        </div>
+      </div>
     </section>
 
   </main>
