program section card added

--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
             the competition of ice hockey in which participants are paid to play. Professional competition began in
             North America around 1900. </p>
         </div>
+        <div>
+          <div>
+            <img src="./Images/2.png" alt="" class="relative">
+            <div class="absolute">
+              <h2>Junior Program</h2>
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="text-white bg-red-500 rounded-lg py-2 px-5 font-semibold"> Register Now!</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
