--- a/index.html
+++ b/index.html
@@ -160,15 +160,36 @@
             the competition of ice hockey in which participants are paid to play. Professional competition began in
             North America around 1900. </p>
         </div>
-        <div>
-          <div>
-            <img src="./Images/2.png" alt="" class="relative">
-            <div class="absolute">
-              <h2>Junior Program</h2>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-              <button class="text-white bg-red-500 rounded-lg py-2 px-5 font-semibold"> Register Now!</button>
+
+        <div class="grid sm:grid-cols-2 gap-5">
+
+          <div class="relative">
+            <img src="./Images/2.png" alt="" class="w-full">
+            <div class="absolute text-white space-y-2 xl:space-y-3 bottom-0 left-0 p-5 xl:p-10">
+              <h2 class="text-2xl font-semibold">Junior Program</h2>
+              <p class="xl:pr-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="bg-red-500 rounded-lg py-2 px-5 font-semibold"> Register Now!</button>
             </div>
           </div>
+
+          <div class="relative">
+            <img src="./Images/3.png" alt="" class="w-full">
+            <div class="absolute text-white space-y-2  xl:space-y-3 bottom-0 left-0 p-5 xl:p-10">
+              <h2 class="text-2xl font-semibold">Junior Program</h2>
+              <p class="xl:pr-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="bg-red-500 rounded-lg py-2 px-5 font-semibold"> Register Now!</button>
+            </div>
+          </div>
+
+          <div class="relative sm:col-span-2">
+            <img src="./Images/4.png" alt="" class="w-full h-64 sm:h-auto">
+            <div class="absolute text-white space-y-3 bottom-0 left-0 p-5 xl:p-10">
+              <h2 class="text-2xl font-semibold">Junior Program</h2>
+              <p class="pr-5 xl:w-2/5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod turpis natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="bg-red-500 rounded-lg py-2 px-5 font-semibold"> Register Now!</button>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
