added new products

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8" />
@@ -36,8 +36,8 @@
           <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
             <li><a>Home</a></li>
             <li><a>About</a></li>
-            <li><a>Pages</a></li>
-            <li><a>Blog</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#blogs">Blog</a></li>
             <li><a>Contact</a></li>
           </ul>
         </div>
@@ -47,8 +47,8 @@
         <ul class="menu menu-horizontal px-1">
           <li><a class="text-[#FF4240]">Home</a></li>
           <li><a>About</a></li>
-          <li><a>Pages</a></li>
-          <li><a>Blog</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#blogs">Blog</a></li>
           <li><a>Contact</a></li>
         </ul>
       </div>
@@ -152,13 +152,11 @@
     </section>
 
     <!-- program section -->
-    <section>
+    <section id="blogs">
       <div class="container mx-auto px-5 py-8 sm:py-10 xl:py-20">
         <div class="text-center mb-8 xl:mb-12">
-          <h1 class="text-2xl sm:text-3xl xl:text-5xl font-extrabold mb-3">Professional Hockeys Club</h1>
-          <p class="text-sm sm:text-lg xl:text-xl text-gray-500 w-11/12 sm:w-9/12 mx-auto">Professional ice hockey is
-            the competition of ice hockey in which participants are paid to play. Professional competition began in
-            North America around 1900. </p>
+          <h1 class="text-2xl sm:text-3xl xl:text-5xl font-extrabold mb-3">Program Sections</h1>
+          <p class="text-sm sm:text-lg xl:text-xl text-gray-500 w-11/12 sm:w-9/12 mx-auto">The game is divided into three periods of 20 minutes playing time each, with a 15-minute intermission between periods. Hockey games may end in a tie unless the rules stipulate an overtime period to serve as a tiebreaker.</p>
         </div>
 
         <div class="grid sm:grid-cols-2 gap-5">
@@ -193,6 +191,101 @@
         </div>
       </div>
     </section>
+
+    <!-- new product section -->
+     <section id="products">
+      <div class="container mx-auto px-5 pb-8 sm:pb-10 xl:pb-20">
+
+        <div class="text-center mb-8 xl:mb-12">
+          <h1 class="text-2xl sm:text-3xl xl:text-5xl font-extrabold mb-3">Our New Products</h1>
+          <p class="text-sm sm:text-lg xl:text-xl text-gray-500 w-11/12 sm:w-9/12 mx-auto"> Start by crafting a clear and engaging announcement email that highlights the product's value, features, and benefits. Share the launch date, provide a brief overview of the product's, and explain how it aligns with the company's goals. </p>
+        </div>
+
+        <!-- product card container -->
+        <div class="grid sm:grid-cols-2 gap-5">
+
+            <div class="card bg-base-100 xl:flex-row shadow-xl border">
+              <figure class="px-5 pt-5">
+                <img src= "./Images/8.png" class= "rounded-xl w-full xl:h-full xl:pb-5" />
+              </figure>
+              <div class="card-body space-y-2 p-5">
+                <p class="space-x-3"> <i class="fa-solid fa-star text-orange-400"></i> 5.0 <i class="fa-regular fa-eye"></i> 27 <i class="fa-regular fa-heart"></i> 200 </p>
+                <h2 class="card-title text-2xl font-extrabold"> World Cup Jersey </h2>
+                <p>Shop all the best official jerseys of the 2022 Qatar FIFA World Cup.</p>
+                <p class="font-bold text-xl text-[#FF4240]">Price - $22.00</p>
+                <p class="text-gray-500"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</p>
+              </div>
+            </div>
+
+            <div class="card bg-base-100 xl:flex-row shadow-xl border">
+              <figure class="px-5 pt-5">
+                <img src= "./Images/6.png" class= "rounded-xl w-full xl:h-full xl:pb-5" />
+              </figure>
+              <div class="card-body space-y-2 p-5">
+                <p class="space-x-3"> <i class="fa-solid fa-star text-orange-400"></i> 4.2 <i class="fa-regular fa-eye"></i> 13 <i class="fa-regular fa-heart"></i> 87 </p>
+                <h2 class="card-title text-2xl font-extrabold"> Football </h2>
+                <p>Football is a family of team sports that involve, kicking a ball to score a goal. </p>
+                <p class="font-bold text-xl text-[#FF4240]">Price - $14.00</p>
+                <p class="text-gray-500"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</p>
+              </div>
+            </div>
+
+            <div class="card bg-base-100 xl:flex-row shadow-xl border">
+              <figure class="px-5 pt-5">
+                <img src= "./Images/7.png" class= "rounded-xl w-full xl:h-full xl:pb-5" />
+              </figure>
+              <div class="card-body space-y-2 p-5">
+                <p class="space-x-3"> <i class="fa-solid fa-star text-orange-400"></i> 4.4 <i class="fa-regular fa-eye"></i> 47 <i class="fa-regular fa-heart"></i> 96 </p>
+                <h2 class="card-title text-2xl font-extrabold"> Cap </h2>
+                <p> The CAP has led the way in setting high standards for laboratory quality through proficiency testing. </p>
+                <p class="font-bold text-xl text-[#FF4240]">Price - $20.00</p>
+                <p class="text-gray-500"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</p>
+              </div>
+            </div>
+
+            <div class="card bg-base-100 xl:flex-row shadow-xl border">
+              <figure class="px-5 pt-5">
+                <img src= "./Images/9.png" class= "rounded-xl w-full xl:h-full xl:pb-5" />
+              </figure>
+              <div class="card-body space-y-2 p-5">
+                <p class="space-x-3"> <i class="fa-solid fa-star text-orange-400"></i> 4.6 <i class="fa-regular fa-eye"></i> 38 <i class="fa-regular fa-heart"></i> 125 </p>
+                <h2 class="card-title text-2xl font-extrabold"> Helmet </h2>
+                <p>The Vision Series Club helmet, in the latest cricket helmet range from Masuri. </p>
+                <p class="font-bold text-xl text-[#FF4240]">Price - $31.00</p>
+                <p class="text-gray-500"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</p>
+              </div>
+            </div>
+
+            <div class="card bg-base-100 xl:flex-row shadow-xl border">
+              <figure class="px-5 pt-5">
+                <img src= "./Images/10.png" class= "rounded-xl w-full xl:h-full xl:pb-5" />
+              </figure>
+              <div class="card-body space-y-2 p-5">
+                <p class="space-x-3"> <i class="fa-solid fa-star text-orange-400"></i> 5.0 <i class="fa-regular fa-eye"></i> 56 <i class="fa-regular fa-heart"></i> 243 </p>
+                <h2 class="card-title text-2xl font-extrabold"> World Cup Football </h2>
+                <p> The FIFA World Cup, often called the World Cup.</p>
+                <p class="font-bold text-xl text-[#FF4240]">Price - $40.00</p>
+                <p class="text-gray-500"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</p>
+              </div>
+            </div>
+
+            <div class="card bg-base-100 xl:flex-row shadow-xl border">
+              <figure class="px-5 pt-5">
+                <img src= "./Images/5.png" class= "rounded-xl w-full xl:h-full xl:pb-5" />
+              </figure>
+              <div class="card-body space-y-2 p-5">
+                <p class="space-x-3"> <i class="fa-solid fa-star text-orange-400"></i> 4.7 <i class="fa-regular fa-eye"></i> 42 <i class="fa-regular fa-heart"></i> 182 </p>
+                <h2 class="card-title text-2xl font-extrabold"> World Cup Jersey </h2>
+                <p>Shop all the best official jerseys of the 2022 Qatar FIFA World Cup.</p>
+                <p class="font-bold text-xl text-[#FF4240]">Price - $49.00</p>
+                <p class="text-gray-500"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</p>
+              </div>
+            </div>
+
+        </div>
+
+      </div>
+     </section>
 
   </main>
   <footer>
