--- a/index.html
+++ b/index.html
@@ -287,6 +287,18 @@
       </div>
      </section>
 
+     <section>
+      <div class="container mx-auto px-5 pb-8 sm:pb-10 xl:pb-20">
+        <div class="text-center mb-8 xl:mb-12">
+          <h1 class="text-2xl sm:text-3xl xl:text-5xl font-extrabold mb-3">Our New Products</h1>
+          <p class="text-sm sm:text-lg xl:text-xl text-gray-500 w-11/12 sm:w-9/12 mx-auto"> Start by crafting a clear and engaging announcement email that highlights the product's value, features, and benefits. Share the launch date, provide a brief overview of the product's, and explain how it aligns with the company's goals. </p>
+        </div>
+        <div>
+
+        </div>
+      </div>
+     </section>
+
   </main>
   <footer>
 
